DevOCL/src/objects/CLQ_Rule__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Applicable_To__c</fullName>
        <label>Applicable To</label>
        <picklist>
            <picklistValues>
                <fullName>Alleged Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Home Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of State Registration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Age Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type A Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type B Home</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Domain__c</fullName>
        <label>Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Staff Files (FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Policies &amp; Procedures(FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indoor-Outdoor Space(FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Safety (FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe &amp; Sanitary Envt (RST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Info(FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s Files (FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postings &amp; Equipment (RST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ratio Info (FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observations (RST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License &amp; Approvals(FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diapering &amp; InfantCare(FT)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Rule object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Long_Name__c</fullName>
        <label>Long Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Type__c</fullName>
        <label>Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Staff Files (FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Policies &amp; Procedures(FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indoor-Outdoor Space(FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health &amp; Safety (FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safe &amp; Sanitary Envt (RST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Info(FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s Files (FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postings &amp; Equipment (RST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ratio Info (FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observations (RST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License &amp; Approvals(FT)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diapering &amp; InfantCare(FT)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule_Effective_Date__c</fullName>
        <label>Rule Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule_Expiration_Date__c</fullName>
        <label>Rule Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule_Language__c</fullName>
        <label>Rule Language (For Report)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule_Number__c</fullName>
        <label>Rule Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule_Summary__c</fullName>
        <label>Rule Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Short_Name__c</fullName>
        <label>Short Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Language__c</fullName>
        <label>Rule Language</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Summary__c</fullName>
        <label>Rule Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>